--- a/Portfolio/src/CSS/index.css
+++ b/Portfolio/src/CSS/index.css
@@ -27,3 +27,15 @@
   height: 100%;
   transition: transform 660ms cubic-bezier(0.65, 0, 0.35, 1);
 }
+
+.fade-in-left {
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 0.3s ease, transform 0.5s ease;
+}
+
+
+.fade-in-left.fade-in-left-show {
+  opacity: 1;
+  transform: translateX(0);
+}
